hmm does write access let you delete